--- a/geonode/layers/templates/layouts/panels.html
+++ b/geonode/layers/templates/layouts/panels.html
@@ -81,7 +81,7 @@
     
     .fstResultItem {
         font-size: 1.2em !important;
-    }
+    }    
 </style>
 
 <br />
@@ -143,7 +143,7 @@
                                 </div>
                                 <div class="col-lg-6">
                                     <div class="row">
-                                        <div class="col-lg-4">
+                                        <div class="col-lg-2">
                                             <span><label for="{{ layer_form.date|id }}">{{ layer_form.date.label }}</label></span>
                                             <!--<p class="xxs-font-size">(When a given event occurred on the resource)</p>-->
                                             {{ layer_form.date }}
@@ -277,7 +277,7 @@
             </div>
             <div class="col-xs-6 col-lg-6">
                 <div class="row">
-                    <div class="col-xs-6 col-lg-6">
+                    <div class="col-xs-3 col-lg-3" style="white-space: nowrap;">
                         <span><label for="{{ layer_form.temporal_extent_start|id }}">{{ layer_form.temporal_extent_start.label }}</label></span>
                         <!--<p class="xxs-font-size">(When a given event occurred on the resource)</p>-->
                         {{ layer_form.temporal_extent_start }}
