- Fix date time piker options on md editor

--- a/geonode/templates/metadata_form_js.html
+++ b/geonode/templates/metadata_form_js.html
@@ -57,7 +57,7 @@
     $(document).ready(
         function() {
           var pickerOptions = {
-              format: 'YYYY-MM-DD',
+              format: 'YYYY-MM-DD hh:mm A',
               icons: {
                   time: 'fa fa-clock-o',
                   date: 'fa fa-calendar',
