--- a/geonode/templates/metadata_form_js.html
+++ b/geonode/templates/metadata_form_js.html
@@ -171,7 +171,26 @@
 
         $('#btn_next_up').click(function(){getNextTab()});
         $('#btn_next_dwn').click(function(){getNextTab()});
-        
+
+        $('#preview_tab').click(function(){
+            $('#preview_pleaseWaitDialog').modal();
+            $('#preview_encoder_iframe')[0].style.width='0';
+            $('#preview_encoder_iframe')[0].style.height='0';            
+            $('#layer_metadata_update').submit();
+        });
+
+        $('#layer_metadata_update').submit(function(e){
+            $.post('metadata', $(this).serialize(), function(data){
+                // Do something more fancy with your respone
+                // $('.message').html(data.message);
+                $('#preview_encoder_iframe')[0].style.width='100%';
+                $('#preview_encoder_iframe')[0].style.height='100%';
+                $('#preview_encoder_iframe')[0].contentWindow.location.reload(true);
+                $('#preview_pleaseWaitDialog').modal('hide');
+            });
+            e.preventDefault();
+        });
+
         if(totalNum == prevNum) {
             $('#liquidPieChart').waterbubble({
                 radius: 30,
