--- a/geonode/layers/templates/layouts/panels.html
+++ b/geonode/layers/templates/layouts/panels.html
@@ -84,6 +84,23 @@
     }    
 </style>
 
+<div class="modal fade" style="width: 100%; height: 100%;" id="preview_pleaseWaitDialog" data-backdrop="static" data-keyboard="false" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h1>Processing...</h1>
+            </div>
+            <div class="modal-body">
+                <div class="progress">
+                  <div class="progress-bar progress-bar-info progress-bar-striped" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width:100%">
+                    Updating Metadata...
+                  </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
 <br />
 <ul id="md_tabs" class="nav nav-tabs">
     <li id="first" class="active">    
@@ -379,23 +396,7 @@
         </div>
     </div>
 
-    <div id="preview" class="tab-pane fade">
-        <div class="modal fade" style="width: 100%; height: 100%;" id="preview_pleaseWaitDialog" data-backdrop="static" data-keyboard="false" aria-hidden="true">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h1>Processing...</h1>
-                    </div>
-                    <div class="modal-body">
-                        <div class="progress">
-                          <div class="progress-bar progress-bar-info progress-bar-striped" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width:100%">
-                            Updating Metadata...
-                          </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+    <div id="preview" class="tab-pane fade" style="overflow: hidden;">
         <!-- iframe id="preview_encoder_iframe" height="100%" width="100%" style="width:0;height:0;border:0;border:none;" src="{% url 'layer_metadata_detail' resource.typename %}"></iframe -->
         <iframe id="preview_encoder_iframe" height="100%" width="100%" style="width:0;height:0;border:0;border:none;" src="/catalogue/csw_to_extra_format/{{resource.uuid}}/{{resource.title}}.html"></iframe>
     </div>
