--- a/geonode/layers/templates/layers/layer_metadata.html
+++ b/geonode/layers/templates/layers/layer_metadata.html
@@ -23,6 +23,24 @@
 {% block body_class %}data{% endblock %}
 
 {% block body_outer %}
+
+<div class="modal fade" style="width: 100%; height: 100%;" id="preview_pleaseWaitDialog" data-backdrop="static" data-keyboard="false" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h1>Processing...</h1>
+            </div>
+            <div class="modal-body">
+                <div class="progress">
+                  <div class="progress-bar progress-bar-info progress-bar-striped" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width:100%">
+                    Updating Metadata...
+                  </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
 <div class="container-fluid page-header" style="position: relative;">
   <!--<a href="{% url "layer_browse" %}" class="btn btn-primary pull-right">{% trans "Explore Layers" %}</a>-->
   <h2 class="page-title">{% trans "Edit Metadata" %}&nbsp;{% blocktrans with layer.typename as layer_title %}for {{ layer_title }}{% endblocktrans %}</h2>
@@ -94,7 +112,7 @@
             {% if not layer.metadata_uploaded_preserve %}
             <div class="form-actions">
 			  <input type="button" id="btn_back_dwn" class="btn btn-primary" value="{% trans "<< Back" %}"/>
-              <input type="submit" class="btn btn-primary" value="{% trans "Update" %}"/>
+              <input type="submit" id="btn_upd_md_dwn" class="btn btn-primary" value="{% trans "Update" %}"/>
               <input type="button" id="btn_next_dwn" class="btn btn-primary" value="{% trans "Next >>" %}"/>
             </div>
             {% endif %}
